--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,5 +15,10 @@
   "plugins": [
     "@typescript-eslint"
   ],
-  "rules": {}
+  "rules": {
+    "space-before-function-paren": [
+      "never",
+      "never"
+    ]
+  }
 }
