--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-standard": "^5.0.0",
     "jest": "^26.6.3",
-    "sequelize-cli": "^6.2.0",
     "ts-jest": "^26.4.4",
     "ts-node-dev": "^1.1.1",
     "tsconfig-paths": "^3.9.0",
@@ -38,7 +37,6 @@
   "dependencies": {
     "express": "^4.17.1",
     "pg": "^8.5.1",
-    "pg-hstore": "^2.3.3",
-    "sequelize": "^6.3.5"
+    "pg-hstore": "^2.3.3"
   }
 }
