--- a/ormconfig.json
+++ b/ormconfig.json
@@ -4,5 +4,14 @@
   "port": 5432,
   "username": "postgres",
   "password": "lgauto2021",
-  "database": "lgauto"
+  "database": "lgauto",
+  "entities": [
+    "./src/models/*.ts"
+  ],
+  "migrations": [
+    "./src/database/migrations/*.ts"
+  ],
+  "cli": {
+    "migrationsDir": "./src/database/migrations"
+  }
 }
