--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@babel/node": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.9",
     "@types/jest": "^26.0.19",
+    "@types/jsonwebtoken": "^8.5.0",
     "@typescript-eslint/eslint-plugin": "4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
     "babel-plugin-module-resolver": "^4.1.0",
@@ -36,7 +38,9 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.29"
