finish JWT and includ admin.id in request

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,12 @@
       "@repositories/*": [
         "./src/repositories/*"
       ],
+      "@config/*": [
+        "./src/config/*"
+      ],
+      "@middlewares/*": [
+        "./src/middlewares/*"
+      ],
     },
     "typeRoots": [
       "./node_modules/@types",
