--- a/.gitignore
+++ b/.gitignore
@@ -211,3 +211,4 @@ $RECYCLE.BIN/
 # .pnp.*
 
 # End of https://www.toptal.com/developers/gitignore/api/node,linux,macos,windows,visualstudiocode,yarn
+yarn.lock
