backend with tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,7 +38,8 @@
       "./src/@types"
     ],
     "types": [
-      "node"
+      "node",
+      "jest"
     ],
     "esModuleInterop": true,
     "resolveJsonModule": true,
